# cfadmin

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Excel.csv  LICENSE  Makefile  POST_FILE.html  Person.pb  Person.proto  README.md  README_zh-cn.md  build.sh  cfadmin  clean.sh  core.h  core_coroutine.c  core_coroutine.h  core_ev.c  core_ev.h  core_memory.h  core_start.c  core_sys.h  core_utils.h  error.html  httpc.txt  main  main.c  main.lua  private1024.pem  private2048.pem  private4096.pem  public1024.pem  public2048.pem  public4096.pem  test.lua
3rd/: Makefile  README.md
docker/: Dockerfile  docker-compose-with-cfadmin.yaml  docker-compose-with-nginx.yaml  docker-compose-with-traefik.yaml  docker-compose.yaml  nginx.conf
docker/db/: database.sql
docker/script/: main.lua  ws.lua
logs/: README.md
luaclib/: CMakeLists.txt  Makefile
luaclib/src/: laio.c  lchild.c  lcrypt.c  lip.c  lpack.c  lsha1.c  lsnapshot.c  lsys.c  ltask.c  ltcp.c  ltimer.c  lua_crypt.c  ludp.c
luaclib/src/lcjson/: Makefile  fpconv.c  lua_cjson.c  strbuf.c  strbuf.h
luaclib/src/lcrypt/: Makefile  aes.c  attributes.h  b64.c  crc.c  des.c  dh.c  hex.c  hmac.c  hmac_ex.c  lcrypt.c  lcrypt.h  md5.c  md5.h  rc.c  rsa.c  sha.c  sha1.c  sha2.c  sha2.h  sha256.c  sm.c  url.c  uuid.c
luaclib/src/lffi/: ctype.c  ffi.c  ffi.h  makefile  parser.c
luaclib/src/lfs/: Makefile  lfs.c  lfs.h
luaclib/src/lhttpparser/: Makefile  httpparser.c  httpparser.h  lhttpparser.c
luaclib/src/lmsgpack/: Makefile  lmsgpack.c
luaclib/src/lpbc/: Makefile  lpb.c  lpb.h
luaclib/src/lpeg/: lpcap.c  lpcode.c  lpcode.h  lpprint.c  lptree.c  lpvm.c  makefile  re.lua
luaclib/src/lz/: Makefile  lzlib.c  miniz.c  miniz.h
lualib/: Admin.lua  Cache.lua  DB.lua  MQ.lua  README.md  TASK.lua  XmlParser.lua  admin.lua  class.lua  csv.lua  dns.lua  form.lua  http.lua  httpc.lua  httpd.lua  json.lua  log.lua  mail.lua  msgpack.lua  template.lua  utils.lua  xml2lua.lua
lualib/Cache/: init.lua  redis.lua  ssdb.lua
lualib/DB/: init.lua  mssql.lua  mysql.lua  pgsql.lua
lualib/MQ/: init.lua  mqtt.lua  redis.lua  stomp.lua
lualib/admin/: README.md  config.lua  cookie.lua  httpctx.lua  init.lua  token.lua  view.lua
lualib/admin/db/: README.md  database.sql  header.lua  init.lua  menu.lua  permission.lua  role.lua  token.lua  user.lua  view.lua
lualib/admin/html/: 404.html  deny.html  redirect.html
lualib/admin/http/: dashboard.lua  login.lua  profile.lua
lualib/admin/locales/: EN-US.lua  ZH-CN.lua  init.lua
lualib/admin/utils/: init.lua
lualib/aio/: init.lua
lualib/cf/: init.lua
lualib/class/: init.lua  meta.lua
lualib/cloud/: README.md
lualib/cloud/location/: amap.lua  baidu.lua  tencent.lua
lualib/cloud/payjs/: README.md  cashier.lua  face.lua  js.lua  micro.lua  native.lua  order.lua  sign.lua  utils.lua
lualib/cloud/paypal/: payment.lua
lualib/cloud/qiniu/: censor.lua  crypt.lua  ocr.lua  oss.lua  sms.lua  stream.lua  token.lua
lualib/cloud/tencent/: ai.lua  location.lua
lualib/cloud/translate/: baidu.lua  youdao.lua
lualib/crypt/: aes.lua  b64.lua  checksum.lua  crc.lua  des.lua  dh.lua  hmac.lua  id.lua  init.lua  rc4.lua  rsa.lua  sha.lua  sm.lua  utils.lua
lualib/datetime/: init.lua
lualib/elasticsearch/: init.lua
lualib/httpc/: class.lua  init.lua  protocol.lua  proxy.lua  ua.lua
lualib/httpd/: Cookie.lua  Form.lua  Redirect.lua  Response.lua  Router.lua  Throw.lua  http.lua  init.lua
lualib/internal/: Co.lua  EV.lua  IO.lua  Loop.lua  TASK.lua  TCP.lua  Timer.lua  UDP.lua  callback.lua  coroutine.lua  req.lua  resp.lua  socket.lua  traverse.lua
lualib/json/: init.lua  jsonp.lua  jwt.lua
lualib/log/: init.lua
lualib/logging/: init.lua
lualib/mail/: init.lua  socket.lua
lualib/process/: channel.lua  dataset.lua  event.lua  master.lua  session.lua  utils.lua  worker.lua
lualib/protobuf/: init.lua  protoc.lua
lualib/protocol/: dns.lua  http.lua  mssql.lua  mysql.lua  pgsql.lua  redis.lua  stomp.lua  websocket.lua
lualib/protocol/http/: code.lua  init.lua  mime.lua  pages.lua  parser.lua  ua.lua
lualib/protocol/mqtt/: bit.lua  bit53.lua  init.lua  luasocket.lua  luasocket_ssl.lua  protocol.lua  protocol4.lua  tools.lua
lualib/stream/: init.lua
lualib/system/: init.lua
lualib/template/: html.lua  init.lua  new.lua
lualib/uitls/: init.lua
lualib/url/: init.lua
lualib/utils/: init.lua  random.lua  set.lua  string.lua  table.lua
lualib/webhook/: dingtalk.lua
lualib/xml2lua/: XmlParser.lua  init.lua  xml2lua.lua
lualib/xmlhandler/: README.md  dom.lua  tree.lua
script/: api.lua  demo.lua  dingtalk.lua  echo.lua  hc.lua  httpc.lua  main.lua  r-admin.lua  r1.lua  r2.lua  test_Cache.lua  test_DB.lua  test_MQ.lua  test_SSDB.lua  test_aio.lua  test_cf.lua  test_cfadmin.lua  test_crypt.lua  test_csv.lua  test_dingtalk.lua  test_dns.lua  test_es.lua  test_ffi.lua  test_http_auth.lua  test_httpc.lua  test_lfs.lua  test_location.lua  test_logging.lua  test_lua_table.lua  test_mail.lua  test_msgpack.lua  test_mysql.lua  test_protobuf.lua  test_qiniu.lua  test_redis.lua  test_system.lua  test_translate.lua  test_upload.lua  test_wsclient.lua  test_zlib.lua  (+3 more)
script/admin/: init.lua  r1.lua  r2.lua  r3.lua
src/: Makefile  core.c  core.h  core_ev.c  core_ev.h  core_loop.c  core_loop.h  core_memory.c  core_memory.h  core_signal.c  core_signal.h  core_socket.c  core_socket.h  core_start.c  core_sys.c  core_sys.h  core_tcp.c  core_tcp.h  core_timer.c  core_timer.h  core_udp.c  core_udp.h  core_utils.h
static/: index.html  welcome.html
static/css/: login.css  xadmin.css
static/js/: echarts.min.js  qrcanvas.min.js
(+38 files in other folders)
